WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164951
Flaky 32-bit JSC test timeouts: stress/op_div-* and ress/op_mod-*
https://bugs.webkit.org/show_bug.cgi?id=164951
Summary
Flaky 32-bit JSC test timeouts: stress/op_div-* and ress/op_mod-*
Ryan Haddad
Reported
2016-11-18 13:29:15 PST
https://build.webkit.org/builders/Apple%20El%20Capitan%2032-bit%20JSC%20%28BuildAndTest%29/builds/4252
** The following JSC stress test failures have been introduced: stress/op_div-ConstVar.js.misc-ftl-no-cjit stress/op_div-VarConst.js.misc-ftl-no-cjit stress/op_div-VarVar.js.misc-ftl-no-cjit stress/op_mod-ConstVar.js.misc-ftl-no-cjit stress/op_mod-VarConst.js.misc-ftl-no-cjit stress/op_mod-VarVar.js.misc-ftl-no-cjit
Attachments
proposed patch.
(6.27 KB, patch)
2016-11-19 00:13 PST
,
Mark Lam
ysuzuki
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2016-11-18 13:30:21 PST
Another instance seen here:
https://build.webkit.org/builders/Apple%20El%20Capitan%2032-bit%20JSC%20%28BuildAndTest%29/builds/4226
** The following JSC stress test failures have been introduced: stress/op_div-VarConst.js.misc-ftl-no-cjit stress/op_mod-ConstVar.js.misc-ftl-no-cjit stress/op_mod-VarConst.js.misc-ftl-no-cjit stress/op_mod-VarVar.js.misc-ftl-no-cjit
Mark Lam
Comment 2
2016-11-18 13:36:47 PST
These are all due to time outs. When did these failures started happening? Either we started running on slower bots or potentially, someone introduced a perf regression.
Ryan Haddad
Comment 3
2016-11-18 13:38:10 PST
(In reply to
comment #2
)
> These are all due to time outs. When did these failures started happening? > Either we started running on slower bots or potentially, someone introduced > a perf regression.
I'm going through logs now to try to find out.
Ryan Haddad
Comment 4
2016-11-18 13:41:32 PST
Earliest instance I can find on this bot is
r208607
/ Fri Nov 11 13:56:25 2016
https://build.webkit.org/builders/Apple%20El%20Capitan%2032-bit%20JSC%20%28BuildAndTest%29/builds/4192
Ryan Haddad
Comment 5
2016-11-18 13:42:09 PST
The bot config has not changed.
Mark Lam
Comment 6
2016-11-19 00:13:49 PST
Created
attachment 295255
[details]
proposed patch. I'm fixing this by simply recognizing that not all tests are equal, and that some just needs more time to run. I've added a --timeoutMultipler=<multiplier> option that can be used on these slower tests to increase their timeout duration. This should fix this issue for good.
Yusuke Suzuki
Comment 7
2016-11-19 00:20:49 PST
Comment on
attachment 295255
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=295255&action=review
r=me
> Source/JavaScriptCore/jsc.cpp:2606 > + auto timeout = std::chrono::microseconds(static_cast<std::chrono::microseconds::rep>(timeoutDuration * 1000000));
Let's use WTF::Seconds.
Mark Lam
Comment 8
2016-11-19 09:41:32 PST
Thanks for the review. I've changed the timeout thread to use WTF::Seconds. Landed in
r208925
: <
http://trac.webkit.org/r208925
>.
Mark Lam
Comment 9
2016-11-19 17:58:10 PST
I forgot to also lengthen the timeout for op_mod-* tests. Will do that in
https://bugs.webkit.org/show_bug.cgi?id=164994
.
Mark Lam
Comment 10
2016-11-23 07:32:09 PST
***
Bug 155289
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug